k8s/booking-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: booking-system
spec:
  selector:
    app: booking-service
  ports:
    - port: 8083
      targetPort: 8083
