k8s/checkin-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkin-service
  namespace: booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkin-service
  template:
    metadata:
      labels:
        app: checkin-service
    spec:
      containers:
        - name: checkin-service
          image: 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: checkin-service
  namespace: booking-system
spec:
  selector:
    app: checkin-service
  ports:
    - port: 8087
      targetPort: 8087
