k8s/flight-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
  namespace: booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:
      containers:
        - name: flight-service
          image: 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
  namespace: booking-system
spec:
  selector:
    app: flight-service
  ports:
    - port: 8081
      targetPort: 8081
