k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: booking-system
spec:
  selector:
    app: notification-service
  ports:
    - port: 8086
      targetPort: 8086
