k8s/payment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: booking-system
spec:
  selector:
    app: payment-service
  ports:
    - port: 8084
      targetPort: 8084
