k8s/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: booking-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: booking-system
spec:
  selector:
    app: user-service
  ports:
    - port: 8088
      targetPort: 8088
